# ValuationAnalysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: publish-docker.yml
data/seed/: us_equity_universe.csv
scripts/: build_sec_sic_index.py
src/valuation_analysis/: api.py  cache_store.py  cli.py  config.py  models.py  progress.py
src/valuation_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/valuation_analysis/providers/: __init__.py  base.py  composite.py  fmp.py  sec_companyfacts.py  yahoo_finance.py
src/valuation_analysis/repositories/: __init__.py  universe.py
src/valuation_analysis/services/: __init__.py  market_enrichment.py  peer_analysis.py  valuation.py
src/valuation_analysis/web/: app.js  index.html  styles.css
