[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valuation-analysis"
version = "0.1.0"
description = "US equity valuation analysis service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
valuation-analysis = "valuation_analysis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
